--- a/app/assets/stylesheets/user-show.scss
+++ b/app/assets/stylesheets/user-show.scss
@@ -30,6 +30,10 @@
 
       .follow-unfollow-button {
         margin-bottom: 20px;
+
+        button {
+          width: 110px;
+        }
       }
 
       i {
