Tweak follow/unfollow buttons and edit account buttons

--- a/app/assets/templates/pages/user/show.html
+++ b/app/assets/templates/pages/user/show.html
@@ -12,11 +12,11 @@
         </a>
         <div class="follow-unfollow-button" ng-if="user.is_artist && !currentUser.is_artist">
           <form ng-submit="followArtist()" novalidate>
-            <button ng-disabled="!currentUser" class="btn btn-success btn-sm" ng-hide="followingThisArtist"><i class="fa fa-users"></i><strong>{{ user.passive_relationships.length }}</strong>Follow</button>
+            <button ng-disabled="!currentUser" class="btn btn-success btn-sm" ng-hide="followingThisArtist"><strong>{{ user.passive_relationships.length }}</strong>Follow</button>
           </form>
 
           <form ng-submit="unfollowArtist()" novalidate>
-            <button class="btn btn-success btn-sm" ng-show="followingThisArtist"><i class="fa fa-users"></i><strong>{{ user.passive_relationships.length }}</strong>Unfollow</button>
+            <button class="btn btn-success btn-sm" ng-show="followingThisArtist"><strong>{{ user.passive_relationships.length }}</strong>Unfollow</button>
           </form>
         </div>
         <p id="profile-about">{{ user.bio }}</p>
