--- a/app/assets/stylesheets/artwork-show.scss
+++ b/app/assets/stylesheets/artwork-show.scss
@@ -86,6 +86,8 @@
   }
   
   .comment-area {
+    padding-top: 45px;
+    border-top: 1px solid $light-grey;
     
     h3 {
       margin-bottom: 20px;
