--- a/app/assets/stylesheets/artwork-show.scss
+++ b/app/assets/stylesheets/artwork-show.scss
@@ -47,8 +47,17 @@
   }
 }
 
+.like-buttons {
+  width: 250px;
+  margin: 0 auto 30px;
+
+  button {
+    width: 100%;
+  }
+}
+
 .artwork-info {
-  margin: 50px 0;
+  margin: 0 0 40px 0;
   text-align: center;
 
   i {
@@ -141,15 +150,6 @@
   }
 
   .artwork-aside {
-    .like-buttons {
-      width: 110px;
-      margin-bottom: 20px;
-
-      button {
-        width: 100%;
-      }
-    }
-
     i {
       margin-right: 5px;
     }
